# smart-meter

./: .gitmodules  README.md
backend/: .env  Cargo.toml  data.db
backend/migrations/2023-01-22-083709_create_measurements/: down.sql  up.sql
backend/migrations/2023-01-30-203026_create_device_info/: down.sql  up.sql
backend/migrations/2023-02-13-190106_create_device_name/: down.sql  up.sql
backend/migrations/2023-09-02-080047_primary_keys/: down.sql  up.sql
backend/src/: api.rs  db.rs  main.rs  packet.rs  req.rs  schema.rs  utils.rs  web.rs
common/: Cargo.toml
common/src/: lib.rs  packet.rs  req.rs
docker/: Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml
docker/scripts/: run.sh
firmware/: .gitignore  Cargo.toml  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: bat.rs  bme680.rs  bsec2.rs  main.rs  mqtt.rs  multicast.rs  packet.rs  rgb_led.rs  utils.rs  wifi.rs
frontend/: Cargo.toml  chart.scss  index.html  style.css
frontend/css/: chart.scss  style.css  style.scss
frontend/src/: dataset.rs  db.rs  main.rs  req.rs  req_utils.rs  request.rs  utils.rs
frontend/src/components/: chart.rs  chart_menu.rs  chart_plotly.rs  devices.rs  mod.rs  summary.rs
