[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
protocol = "3.4.0"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0"
diesel = { version = "2.0.2", features = ["sqlite"] }
dotenvy = "0.15"
tokio = {version="1.24.2", features = ["full"]}
env_logger = "0.10.0"

common = { path = "../common" }
chrono = "0.4.24"
