[package]
name = "backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
postcard = "1.0.4"
serde = { version = "1.0.158", features = ["derive"] }
anyhow = "1.0"
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenvy = "0.15.7"
tokio = {version="1.24.2", features = ["full"]}
env_logger = "0.10.0"

common = { path = "../common" }
chrono = "0.4.24"
