[package]
name = "firmware-m1s1"
version = "0.4.1"
authors = ["Paul <krepa098@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
#pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.33.0", features = ["binstart"] }
esp-idf-hal = "0.41.0"
esp-idf-svc = { version = "0.46.0", features = [] }
embedded-svc = "0.25.0"
embedded-hal = "0.2.7"

anyhow = "1.0.70"
heapless = "0.7.16"
serde = "1.0.158"
log = "0.4.17"
bitbybit = "1.1.3"
arbitrary-int = "1.2.3"
num_enum = "0.6.1"
postcard = "1.0.4"
dotenvy = "0.15.7"

common = { path = "../common" }

[build-dependencies]
embuild = "0.31.2"
bindgen = "0.65.1"
