[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json", "serde_json"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.33"
yew = "0.19.3"
yew-chart = "0.5.0"
yew-router = "0.16"
humantime = "2.1.0"
js-sys = "0.3.61"
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
chrono = "0.4.23"
web-sys = "0.3.61"
serde = { version = "1.0.152", features = ["derive"] }