[package]
name = "frontend"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json", "serde_json"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.33"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yew-hooks = "0.2.0"
humantime = "2.1.0"
js-sys = "0.3.61"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.84"
chrono = { version = "0.4.23", features = ["serde"] }
web-sys = "0.3.61"
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4.17"
anyhow = "1"
plotly = { version = "0.8.3", features = ["wasm"] }